@@ -652,6 +652,20 @@ name|google
 operator|.
 name|common
 operator|.
+name|annotations
+operator|.
+name|VisibleForTesting
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
 name|base
 operator|.
 name|Predicate
@@ -1381,6 +1395,45 @@ range|:
 name|fileList
 control|)
 block|{
+name|FileInputStream
+name|in
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|in
+operator|=
+name|secureOpenFile
+argument_list|(
+name|logFile
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|logErrorMessage
+argument_list|(
+name|logFile
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|in
+argument_list|)
+expr_stmt|;
+continue|continue;
+block|}
 specifier|final
 name|long
 name|fileLength
@@ -1415,27 +1468,8 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// Write the log itself
-name|FileInputStream
-name|in
-init|=
-literal|null
-decl_stmt|;
 try|try
 block|{
-name|in
-operator|=
-name|SecureIOUtils
-operator|.
-name|openForRead
-argument_list|(
-name|logFile
-argument_list|,
-name|getUser
-argument_list|()
-argument_list|,
-literal|null
-argument_list|)
-expr_stmt|;
 name|byte
 index|[]
 name|buf
@@ -1567,12 +1601,89 @@ block|{
 name|String
 name|message
 init|=
+name|logErrorMessage
+argument_list|(
+name|logFile
+argument_list|,
+name|e
+argument_list|)
+decl_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+name|message
+operator|.
+name|getBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|in
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+annotation|@
+name|VisibleForTesting
+DECL|method|secureOpenFile (File logFile)
+specifier|public
+name|FileInputStream
+name|secureOpenFile
+parameter_list|(
+name|File
+name|logFile
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|SecureIOUtils
+operator|.
+name|openForRead
+argument_list|(
+name|logFile
+argument_list|,
+name|getUser
+argument_list|()
+argument_list|,
+literal|null
+argument_list|)
+return|;
+block|}
+DECL|method|logErrorMessage (File logFile, Exception e)
+specifier|private
+specifier|static
+name|String
+name|logErrorMessage
+parameter_list|(
+name|File
+name|logFile
+parameter_list|,
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|String
+name|message
+init|=
 literal|"Error aggregating log file. Log file : "
 operator|+
 name|logFile
 operator|.
 name|getAbsolutePath
 argument_list|()
+operator|+
+literal|". "
 operator|+
 name|e
 operator|.
@@ -1588,34 +1699,9 @@ argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
-name|out
-operator|.
-name|write
-argument_list|(
+return|return
 name|message
-operator|.
-name|getBytes
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-finally|finally
-block|{
-if|if
-condition|(
-name|in
-operator|!=
-literal|null
-condition|)
-block|{
-name|in
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-block|}
+return|;
 block|}
 comment|// Added for testing purpose.
 DECL|method|getUser ()
